@@ -53,7 +53,7 @@ show_error(const boost::format &format) {
 
 void find_and_verify_track_uids(KaxTracks &tracks, std::vector<track_spec_t> &tspecs);
 
-bool extract_tracks(const std::string &file_name, std::vector<track_spec_t> &tspecs);
+bool extract_tracks(const std::string &file_name, std::vector<track_spec_t> &tspecs, kax_analyzer_c::parse_mode_e parse_mode);
 void extract_tags(const std::string &file_name, kax_analyzer_c::parse_mode_e parse_mode);
 void extract_chapters(const std::string &file_name, bool chapter_format_simple, kax_analyzer_c::parse_mode_e parse_mode);
 void extract_attachments(const std::string &file_name, std::vector<track_spec_t> &tracks, kax_analyzer_c::parse_mode_e parse_mode);
