@@ -1,6 +1,11 @@
 2013-12-29  Moritz Bunkus  <moritz@bunkus.org>
 
-        * mmgL bug fixL the »playlist items« list box in the »select
+        * mkvextract: bug fix: if the track headers were located at the
+        end of the file (e.g. after modification with mkvpropedit or mmg's
+        header editor) then mkvextract was writing files with a length 0
+        bytes.
+
+        * mmg: bug fix: the »playlist items« list box in the »select
         playlist file to add« dialog was showing the items in reversed
         order. Fixes #952.
 
